--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-vanta": "^0.0.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
